--- a/Makefile.in
+++ b/Makefile.in
@@ -72,6 +72,7 @@ termtojson.tex:	term_to_json.pl
 
 clean:
 		rm -f *~ *% config.log
+		rm -f pendoc.tex pengines.tex penlib.tex termtojson.tex
 
 distclean:	clean
 		rm -f config.h config.cache config.status Makefile
