TEST: Added regression testing for the web client

--- a/Makefile.in
+++ b/Makefile.in
@@ -50,6 +50,7 @@ uninstall:
 
 check::
 		$(PL) -q -f test_pengines.pl -g test_pengines,halt -t 'halt(1)'
+		$(PL) -q -f test_js.pl -g test_js,halt -t 'halt(1)'
 
 
 ################################################################
