Minimize installation of test files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,8 @@ swipl_plugin(pengines_css
 	     PL_LIBS web/css/plterm.css)
 
 test_libs(pengines term_html
-	  PACKAGES clib sgml http)
+	  PACKAGES clib sgml http
+	  TEST_FILES test_local.pl)
 
 swipl_examples(examples/client.pl examples/server.pl)
 swipl_examples(${WEB_EXAMPLES} SUBDIR web)
